--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
+<h1>
+  Welcome to {{title}}.
+</h1>
+<a routerLink="/">Home</a>
+<a routerLink="/products">Products</a>
 <div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!
-  </h1>
   <router-outlet></router-outlet>
 </div>
