--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,3 +1,4 @@
-<p>
-  product works!
-</p>
+<h2> Available Books: </h2>
+<ng-container *ngFor="let book of (books$ | async)">
+  <p>{{ book.id }} : {{ book.name}}</p>
+</ng-container>
